[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "value-iteration"
version = "0.1.0"
description = "A simple value iteration implementation for finite discounted MDPs."
readme = "README.MD"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
